Fixed an Q_ASSERT(!m_numTiles) bug

There was a race condition in a copy-constructor of the hash
table. The source table should have been locked first to get a safe
clone.
BUG:232524

svn path=/trunk/koffice/; revision=1115720